--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,9 @@
   "extends": ["taro"],
   "rules": {
     "no-unused-vars":0,
+    "react/jsx-tag-spacing":0,
+    "jsx-quotes":0,
+    "react/jsx-indent-props":0,
     "import/newline-after-import":0,
 //    "no-unused-vars": ["error", { "varsIgnorePattern": "Taro" }],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".tsx"] }]
