--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@tarojs/plugin-babel": "1.2.13",
     "@tarojs/plugin-csso": "1.2.13",
     "@tarojs/plugin-less": "1.2.14",
+    "@tarojs/plugin-sass": "^1.2.26",
     "@tarojs/plugin-uglifyjs": "1.2.13",
     "@tarojs/webpack-runner": "1.2.13",
     "@types/react": "^16.4.8",
